chore: refactor code and add swagger
